Updated styling, fixed z-index

--- a/src/store/LandingPage.css
+++ b/src/store/LandingPage.css
@@ -39,7 +39,7 @@ body {
 
 .header {
   text-align: center;
-  z-index: 100000;
+  z-index: 1000000;
 }
 
 .carousel-text h1 {
